# ratatui-demo

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs
