[package]
name = "ratatui-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
terminput = "0.5.3"
terminput-crossterm = "0.3.3"
termion = "4.0.5"
tokio = { version = "1.47.1", features = ["full"] }
